# webdev_py

./: .gitignore  README.md  pyproject.toml  shell.nix
src/cli_app/: main.py
src/hello_world/hello_world/: settings.py  urls.py  views.py
